Referências do abstract e introdução prontas

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -140,19 +140,19 @@
 \maketitle
 
 \section{Introdução}
-Problemas nos quais o agente deve tomar uma série de decisões sequenciais podem ser resolvidos através de técnicas de Aprendizado por Reforço \cite{rl1998, rlczaba}, em que o agente recebe um reforço numérico indicando a qualidade de cada ação tomada. Esse processo de aprendizado ocorre por tentativa e erro, no qual o agente alterna entre a \emph{aplicação} do conhecimento adquirido até o momento para selecionar a melhor ação e a \emph{exploração} do ambiente, onde o agente experimenta novas ações, aumentando o seu conhecimento sobre o ambiente e o problema. Apesar do sucesso apresentado na aplicação de técnicas AR a problemas reais \cite{}, elas podem apresentar indesejada lentidão na obtenção das soluções.
+Problemas nos quais o agente deve tomar uma série de decisões sequenciais podem ser resolvidos através de técnicas de Aprendizado por Reforço \cite{rlsutton,rlczaba}, em que o agente recebe um reforço numérico indicando a qualidade de cada ação tomada. Esse processo de aprendizado ocorre por tentativa e erro, no qual o agente alterna entre a \emph{aplicação} do conhecimento adquirido até o momento para selecionar a melhor ação e a \emph{exploração} do ambiente, onde o agente experimenta novas ações, aumentando o seu conhecimento sobre o ambiente e o problema. Apesar do sucesso apresentado na aplicação de técnicas AR a problemas reais \cite{tesauro1995tdgammon,barto1996elevator,abbeel2007helicopter}, elas podem apresentar indesejada lentidão na obtenção das soluções \cite{barto2003hrl}.
  
-Uma forma de mitigar essa lentidão é explorar características da \emph{representação} do problema original que permitam a aplicação de técnicas de otimização. Um exemplo disso é a utilização de options \cite{option}, que permitem que um problema de AR originalmente com representação monolítica seja representado de forma modular. Nessa nova representação, são determinados sub-problemas componentes do problema original, permitindo o aprendizado simultâneo da solução para o problema original e seus sub-problemas. Quando o problema original possui uma estrutura \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez o mesmo sub-problema em momentos diferentes. Nesses casos, a utilização de options apresenta a vantagem de acelerar o aprendizado por eliminar a necessidade de se aprender a solução para o mesmo sub-problema mais de uma vez, permitindo o reuso do conhecimento já adquirido na forma de options \cite{option}.
+Uma forma de mitigar essa lentidão é explorar características da \emph{representação} do problema original que permitam a aplicação de técnicas de otimização. Um exemplo disso é a utilização de options \cite{option1999}, que permitem que um problema de AR originalmente com representação monolítica seja representado de forma modular. Na nova representação, são determinados sub-problemas componentes do problema original, permitindo o aprendizado simultâneo da solução para o problema original e seus sub-problemas. Quando o problema original possui uma estrutura \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez o mesmo sub-problema em momentos diferentes. Nesses casos, a utilização de options apresenta a vantagem de acelerar o aprendizado por eliminar a necessidade de se aprender a solução para o mesmo sub-problema mais de uma vez, permitindo o reuso do conhecimento já adquirido na forma de options \cite{option1999}.
 
-Entretanto, para que as options possam ser utilizadas, há a necessidade da definição de elementos cuja identificação pode não ser imediata à apreciação do problema, podendo causar sobrecarga em tempo de projeto. Para contornar esse revés, são estudadas técnicas de descoberta automática de options \cite{}, em que a definição das mesmas fica a cargo de um algoritmo responsável por identificar sub-problemas e criar options para resolvê-los. Das diversas técnicas empregadas, pode ser destacada a utilização de \emph{motivação intrínseca} em AR \cite{imrl}, em que o agente recebe recompensas adicionais através de um mecanismo interno associado a variações de características do ambiente que lhe despertam \emph{marcado interesse}. Nessas técnicas, o agente é codificado de forma a associar sub-problemas a variações significativas de atributos selecionados na descrição fatorada do estado, reduzindo o trabalho de definição das options à determinação dos atributos relevantes para a identificação dos sub-problemas \cite{imrl}.
+Entretanto, para que as options possam ser utilizadas, há a necessidade da definição de elementos cuja identificação pode não ser imediata à apreciação do problema, podendo causar sobrecarga em tempo de projeto. Para contornar esse revés, são estudadas técnicas de descoberta automática de options \cite{stolle2002learning,bakker2004hierarchical,mcgovern2001automatic}, em que a definição das mesmas fica a cargo de um algoritmo responsável por identificar sub-problemas e criar options para resolvê-los. Das diversas técnicas empregadas, pode ser destacada a utilização de \emph{motivação intrínseca} em AR \cite{imrl2004}, em que o agente recebe recompensas adicionais através de um mecanismo interno associado a variações de características do ambiente que lhe despertam \emph{marcado interesse}. Nessas técnicas, o agente é codificado de forma a associar sub-problemas a variações significativas de atributos selecionados na descrição fatorada do estado, reduzindo o trabalho de definição das options à determinação dos atributos relevantes para a identificação dos sub-problemas \cite{imrl2004}.
 
-Essa técnica foi aplicada com sucesso na solução de um problema com forte estrutura hierárquica \cite{imrl}, através da proposta de um algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da aprensentação detalhada do papel da motivação intrínseca no aprendizado, não há uma investigação mais aprofundada dos diversos componentes de aprendizado envolvidos algoritmo, notadamente a estratégia de aplicação das options aprendidas. Neste trabalho, investigamos essa questão, apresentando algumas propostas de estratégias para a aplicação das options aprendidas juntamente com a avaliação experimental de cada uma delas e uma breve discussão teórica.
+Essa técnica foi aplicada com sucesso na solução de um problema com forte estrutura hierárquica \cite{imrl2004}, através da proposta de um algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da aprensentação detalhada do papel da motivação intrínseca no aprendizado, não há uma investigação mais aprofundada dos diversos componentes de aprendizado envolvidos algoritmo, notadamente a estratégia de aplicação das options aprendidas. Neste trabalho, investigamos essa questão, apresentando algumas propostas de estratégias para a aplicação das options aprendidas juntamente com a avaliação experimental de cada uma delas e uma breve discussão teórica.
 
 \section{Fundamentos Teóricos}
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
 
 \section{Algoritmo Proposto}\label{sec:algoritmo}
-No Algoritmo \ref{alg:modificado} encontram-se marcadas as modificações propostas em relação ao algoritmo original \cite{imrl}. O intuito é o de contribuir à proposta original soluções de eventuais ambiguidades ou aparentes inconsistências, dessa forma apresentando um algoritmo que, mantendo o espírito original da utilização de Motivação Instrínseca no Aprendizado por Reforço, acrescenta alternativas de implementação buscando obter melhorias de desempenho no aprendizado. Abaixo são descritas as motivações e respectivas motivações teóricas e/ou de cunho prático.
+No Algoritmo \ref{alg:modificado} encontram-se marcadas as modificações propostas em relação ao algoritmo original \cite{imrl2004}. O intuito é o de contribuir à proposta original soluções de eventuais ambiguidades ou aparentes inconsistências, dessa forma apresentando um algoritmo que, mantendo o espírito original da utilização de Motivação Instrínseca no Aprendizado por Reforço, acrescenta alternativas de implementação buscando obter melhorias de desempenho no aprendizado. Abaixo são descritas as motivações e respectivas motivações teóricas e/ou de cunho prático.
 
 Nas linhas \ref{alg:mod:ind:model}, \ref{alg:mod:ind:ql} e \ref{alg:mod:ind:qo}, os índices de $r^e_t$ e $r^i_t$ foram modificados para $r^e_{t+1}$ e $r^i_{t+1}$, respectivamente. Isso foi feito para permitir que as atualizações que utilizam esses valores considerassem a transição $s_t,\ a_t \leftarrow s_{t+1}$ ao invés da precedente a esta, como era anteriormente. Ainda de acordo com essa modificação, a obtenção de $r^e_{t+1}$, que anteriormente era realizada após a linha \ref{alg:mod:re2:localantigo}, passa a ser realizada logo após a transição de estados (linha \ref{alg:mod:re2}).
 
@@ -328,7 +328,7 @@ Para avaliar a importância relativa da descoberta de options com auxílio de moti
 
 Para verificar a suscetibilidade do algoritmo proposto seria à \tr{estratégia de abandono da option}, foram realizadas repetições de experimentos com variações gradativas do valor de $\epsilon_o$, conforme descrito na seção \tr{...}. Os resultados são apresentados na figura \ref{fig:epsopt}. O gráfico mostra a média cumulativa de ativações do \emph{monkey} por passo. Pela análise desses resultados, podemos verificar a variação do desempenho do aprendizado com o valor escolhido para $\epsilon_o$, sugerindo que a correta escolha desse parâmetro possui um impacto significativo no desempenho de aprendizado do agente. \tr{TODO: complementar}
 
-Foram também investigadas duas estratégias de adição de novos estados à option: (i) \tr{backward}, em que um novo estado $s_t$ somente é adicionado ao conjunto iniciador $I^o$ de uma option $o$ se ocorrer que ao realizar a transição $s_t,\ a_t \rightarrow s_{t+1}$, tenha-se $s_{t+1} \in I^o$ e (ii) \tr{backward+forward}, em que ocorre a adição descrita em (i), além de: caso o agente, estando em $s_t \in I^o$, realizar a transição  $s_t,\ a_t \rightarrow s_{t+1}$, $s_{t+1}$ é incluído em $I^o$. Como no algoritmo original, somente era realizada a adição (i), mas no artigo original de options \cite{option} é levantada também a possibilidade descrita em (ii), procedeu-se à investigação dos possíveis resultados decorrentes dessa nova adição. Os resultados desse experimento podem ser vistos na figura \ref{fig:dummy}, que mostra \tr{...}. Pela análise dos resultados aí presentes, podemos concluir que \tr{...}.
+Foram também investigadas duas estratégias de adição de novos estados à option: (i) \tr{backward}, em que um novo estado $s_t$ somente é adicionado ao conjunto iniciador $I^o$ de uma option $o$ se ocorrer que ao realizar a transição $s_t,\ a_t \rightarrow s_{t+1}$, tenha-se $s_{t+1} \in I^o$ e (ii) \tr{backward+forward}, em que ocorre a adição descrita em (i), além de: caso o agente, estando em $s_t \in I^o$, realizar a transição  $s_t,\ a_t \rightarrow s_{t+1}$, $s_{t+1}$ é incluído em $I^o$. Como no algoritmo original, somente era realizada a adição (i), mas no artigo original de options \cite{option1999} é levantada também a possibilidade descrita em (ii), procedeu-se à investigação dos possíveis resultados decorrentes dessa nova adição. Os resultados desse experimento podem ser vistos na figura \ref{fig:dummy}, que mostra \tr{...}. Pela análise dos resultados aí presentes, podemos concluir que \tr{...}.
 
 \begin{figure}
     \centering
@@ -342,7 +342,7 @@ Foram também investigadas duas estratégias de adição de novos estados à option: 
 
 % INCLUDE BIBLIOGRAPHY WHICH MUST FOLLOW kdmile.bst TEMPLATE
 \bibliographystyle{kdmile}
-\bibliography{kdmileb}
+\bibliography{kdmile}
 % For information on how to write bibliography entries, 
 % see file kdmileb.bib
 
