Seção que descreva as propostas passa a se chamar /Proposta/

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -241,7 +241,7 @@
 % diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam
 % vestibulum accumsan nisl.
 
-\section{Algoritmo}\label{sec:algoritmo}
+\section{Proposta}\label{sec:algoritmo}
 
 \newcommand{\pilhaS}{\mathcal{P}}
 \newcommand{\pilha}{$\pilhaS$}
